== Version 0.2.1 (in SVN)

* The constructor of Gecode::Model no longer has to be called by classes inheriting from it.

== Version 0.2.0

This is the first release of Gecode/R, a Ruby interface to Gecode.

* Added support for finite domain integers.
* Added some basic relation, linear and distinct constraints.
* Added the basis needed to model problems and find the first solution.