@@ -1,6 +1,7 @@
 == Version 0.2.1 (in SVN)
 
 * The constructor of Gecode::Model no longer has to be called by classes inheriting from it.
+* Added Model#reset! which resets a model after search.
 
 == Version 0.2.0
 
